fix(Post.jsx): added overflow: hidden for image container

--- a/src/index.css
+++ b/src/index.css
@@ -47,6 +47,10 @@
   object-fit: contain;
 }
 
+.post__img_container {
+  overflow-x: hidden;
+}
+
 .post__img_container:only-of-type .post__img {
   border-top: 1px solid lightgrey;
   border-bottom: 1px solid rgba(211, 211, 211, 0.281);
